<?xml version="1.0"?>
<package format="2">
  <name>slap_bringup</name>
  <version>1.0.0</version>
  <description>The slap_bringup package</description>

  <author email="dsor.isr@gmail.com">#DSORTeam</author>
  <maintainer email="dsor.isr@gmail.com">#DSORTeam</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
